--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,10 @@
 				<version>1.18.38</version>
 				<scope>provided</scope>
 			</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
