feat: added Eureka healthcheck

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -59,3 +59,8 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 # Configuracion Swagger
 springdoc.api-docs.path=/users/v3/api-docs
 springdoc.swagger-ui.path=/users/swagger-ui.html
+
+# Configuracion Eureka HealthCheck
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+eureka.client.healthcheck.enabled=true
