feat: update application.properties prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -43,6 +43,7 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # Configuracion Zipkin
 management.tracing.sampling.probability=1.0
 management.tracing.enabled=true
+management.zipkin.tracing.endpoint=${SPRING_ZIPKIN_BASE_URL}
 
 # Configuracion Google
 spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
