fix: change env variables names

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ eureka.instance.prefer-ip-address=true
 
 # Configuracion JWT
 jwt.expiration=8000000000
-jwt.secret=${SECRET_KEY}
+jwt.secret=${JWT_SECRET}
 
 # Configuracion RabbitMQ
 spring.rabbitmq.host=localhost
@@ -32,7 +32,7 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 # Configuracion SMTP
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=grupo3bootcampaccenture@gmail.com
+spring.mail.username=${SPRING_MAIL_USERNAME}
 spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
